fix spacing of check icon

--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -7,8 +7,8 @@
   padding-bottom: 7px;
 }
 
-.edit_activity {
-  .columns {padding:  0}
+.activity-form {
+  .icon-ok {cursor: pointer}
   input {
     margin: 0;
   }
